--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint-config-airbnb": "19.0.4",
