--- a/package.json
+++ b/package.json
@@ -10,25 +10,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.2",
-    "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest",
+    "@mui/styled-engine": "^5.13.2",
     "@mui/styled-engine-sc": "^5.11.0",
-    "@next/font": "13.1.1",
-    "@types/node": "18.11.18",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.10",
+    "@next/font": "13.4.5",
+    "@types/node": "20.3.1",
+    "@types/react": "18.2.12",
+    "@types/react-dom": "18.2.5",
     "eslint": "^8.2.0",
-    "eslint-config-next": "13.1.1",
-    "imagemin-mozjpeg": "^9.0.0",
+    "eslint-config-next": "13.4.5",
+    "imagemin-mozjpeg": "^10.0.0",
     "imagemin-optipng": "^8.0.0",
-    "imagemin-svgo": "^9.0.0",
-    "next": "13.1.1",
+    "imagemin-svgo": "^10.0.1",
+    "next": "13.4.5",
     "next-optimized-images": "^2.6.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "styled-components": "^5.3.6",
-    "typescript": "4.9.4"
+    "styled-components": "^6.0.0-rc.3",
+    "typescript": "5.1.3"
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.26",
